fix logo alignment on mobile logged out views

--- a/client/app/components/app-header/app-header.directive.scss
+++ b/client/app/components/app-header/app-header.directive.scss
@@ -1,15 +1,17 @@
 app-header {
   position: relative;
-  z-index: 1;
+  z-index: 5;
   display: block;
 }
 
 // header styles
 .app-header {
+  height: 130px;
   position: relative;
   z-index: 100;
 
   .plus-button {
+    transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.2s;
     position: absolute;
     top: 115px;
     bottom: -43px;
@@ -18,10 +20,6 @@ app-header {
     width: 60px;
     border: solid 4px white;
     right: 0;
-
-    &.ng-enter, &.ng-leave {
-      transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.2s;
-    }
 
     &.ng-enter,
     &.ng-leave.ng-leave-active {
@@ -34,8 +32,6 @@ app-header {
       opacity: 1;
     }
   }
-
-  height: 130px;
 
   .icon-logo-Rex {
     position: absolute;
@@ -63,7 +59,7 @@ app-header {
   // start custom state styles
   &.logged-in {
     .icon-logo-Rex {
-      //transition: all .3s;
+      transition: all .3s;
 
       left: 0;
       margin-left: 0;
@@ -73,6 +69,23 @@ app-header {
       display: inline-block;
       right: 0;
       margin-left: 0;
+    }
+  }
+}
+
+@media #{$lessThanTablet} {
+  .app-header {
+    height: 50px;
+
+    .icon-logo-Rex {
+      height: 50px;
+      width: 104px;
+      margin-top: -25px;
+      margin-left: -52px;
+    }
+
+    .plus-button {
+      top: 74px;
     }
   }
 }
