--- a/client/app/components/search-input/search-input.directive.scss
+++ b/client/app/components/search-input/search-input.directive.scss
@@ -29,19 +29,10 @@
   }
 }
 
-@media #{$lessThanSmall} {
-  .search-input {
-    h2{
-      text-align: center;
-    }
-
-  }
-}
-
 @media #{$lessThanTablet} {
   .search-input {
     button.search-icon{
-      top: 0px;
+      top: 0;
     }
   }
 }
